--- a/index.html
+++ b/index.html
@@ -1,19 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" >
-<head>
-  <meta charset="UTF-8">
-  <title>Magical Moments</title>
-  <link rel="stylesheet" href="./style.css">
-
-</head>
-<body>
-<!-- partial:index.partial.html -->
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Magical Moments</title>
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -32,42 +23,46 @@
         <section id="projects">
             <h2>Scratch Projects</h2>
             <div class="grid">
-                <!-- Add your Scratch project HTML files here -->
-                <div class="project">
-                    <iframe src="projects/project1.html"></iframe>
-                    <p>Project 1</p>
+                <div class="item">
+                    <img src="images/project1.jpg" alt="Project 1 Thumbnail">
+                    <h3>Project 1</h3>
+                    <p>A fun interactive game made in Scratch!</p>
+                    <a href="projects/project1.html" target="_blank">View Project</a>
                 </div>
-                <div class="project">
-                    <iframe src="projects/project2.html"></iframe>
-                    <p>Project 2</p>
+                <div class="item">
+                    <img src="images/project2.jpg" alt="Project 2 Thumbnail">
+                    <h3>Project 2</h3>
+                    <p>A creative animation about space exploration.</p>
+                    <a href="projects/project2.html" target="_blank">View Project</a>
                 </div>
             </div>
         </section>
         <section id="stories">
             <h2>Stories</h2>
-            <article>
-                <h3>Story Title</h3>
-                <p>Short description or excerpt...</p>
-                <a href="stories/story1.html" target="_blank">Read More</a>
-            </article>
+            <div class="grid">
+                <div class="item">
+                    <img src="images/story1.jpg" alt="Story 1 Thumbnail">
+                    <h3>The Magical Forest</h3>
+                    <p>A tale of adventure and friendship in an enchanted forest.</p>
+                    <a href="stories/story1.html" target="_blank">Read Story</a>
+                </div>
+            </div>
         </section>
         <section id="poetry">
             <h2>Poetry</h2>
-            <article>
-                <h3>Poem Title</h3>
-                <p>Short description or excerpt...</p>
-                <a href="poetry/poem1.html" target="_blank">Read More</a>
-            </article>
+            <div class="grid">
+                <div class="item">
+                    <img src="images/poem1.jpg" alt="Poem 1 Thumbnail">
+                    <h3>Whispers of the Sea</h3>
+                    <p>A heartfelt poem inspired by the ocean.</p>
+                    <a href="poetry/poem1.html" target="_blank">Read Poem</a>
+                </div>
+            </div>
         </section>
     </main>
     <footer>
         <p>&copy; 2024 Magical Moments. All rights reserved.</p>
     </footer>
     <script src="scripts.js"></script>
-</body>
-</html>
-<!-- partial -->
-  <script  src="./script.js"></script>
-
 </body>
 </html>
