--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             <div class="grid">
                 <div class="item">
                     <img src="images/project1.jpg" alt="Project 1 Thumbnail">
-                    <h3>Project 1</h3>
-                    <p>A fun interactive game made in Scratch!</p>
+                    <h3>Volume Calculator</h3>
+                    <p>A simple volume calculator</p>
                     <a href="projects/project1.html" target="_blank">View Project</a>
                 </div>
                 <div class="item">
