--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h2>Scratch Projects</h2>
             <div class="grid">
                 <div class="item">
-                    <img src="images/project1.jpg" alt="Project 1 Thumbnail">
+                    <img src="images/VolumeCalculator.jpg" alt="Project 1 Thumbnail">
                     <h3>Volume Calculator</h3>
                     <p>A simple volume calculator</p>
                     <a href="projects/project1.html" target="_blank">View Project</a>
