--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <img src="images/VolumeCalculator.jpg" alt="Project 1 Thumbnail">
                     <h3>Volume Calculator</h3>
                     <p>A simple volume calculator</p>
-                    <a href="projects/project1.html" target="_blank">View Project</a>
+                    <a href="projects/VolumeCalculator.html" target="_blank">View Project</a>
                 </div>
                 <div class="item">
                     <img src="images/project2.jpg" alt="Project 2 Thumbnail">
