--- a/index.html
+++ b/index.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
+<html lang="en" >
+<head>
+  <meta charset="UTF-8">
+  <title>Magical Moments</title>
+  <link rel="stylesheet" href="./style.css">
+
+</head>
+<body>
+<!-- partial:index.partial.html -->
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Magical Moments</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Playwrite+SK+Guides&family=Special+Elite&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-</head>
+<link href="https://fonts.googleapis.com/css2?family=Playwrite+SK+Guides&family=Special+Elite&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="style.css">
 <body>
     <header>
         <h1>Magical Moments</h1>
@@ -26,10 +35,10 @@
             <h2>Scratch Projects</h2>
             <div class="grid">
                 <div class="item">
-                    <img src="images/VolumeCalculator.jpg" alt="Project 1 Thumbnail">
-                    <h3>Volume Calculator</h3>
-                    <p>A simple volume calculator</p>
-                    <a href="projects/VolumeCalculator.html" target="_blank">View Project</a>
+                    <img src="images/project1.jpg" alt="Project 1 Thumbnail">
+                    <h3>Project 1</h3>
+                    <p>A fun interactive game made in Scratch!</p>
+                    <a href="projects/project1.html" target="_blank">View Project</a>
                 </div>
                 <div class="item">
                     <img src="images/project2.jpg" alt="Project 2 Thumbnail">
@@ -66,5 +75,10 @@
         <p>&copy; 2024 Magical Moments. All rights reserved.</p>
     </footer>
     <script src="scripts.js"></script>
+</body>
+</html>
+<!-- partial -->
+  <script  src="./script.js"></script>
+
 </body>
 </html>
