--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
             <h2>Scratch Projects</h2>
             <div class="grid">
                 <div class="item">
-                    <img src="images/project1.jpg" alt="Project 1 Thumbnail">
+                    <img src="images/VolumeCalculator.jpg" alt="Project 1 Thumbnail">
                     <h3>Project 1</h3>
                     <p>A fun interactive game made in Scratch!</p>
-                    <a href="projects/project1.html" target="_blank">View Project</a>
+                    <a href="projects/VolumeCalculator.html" target="_blank">View Project</a>
                 </div>
                 <div class="item">
                     <img src="images/project2.jpg" alt="Project 2 Thumbnail">
