--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="grid">
                 <div class="item">
                     <img src="images/VolumeCalculator.jpg" alt="Project 1 Thumbnail">
-                    <h3>Project 1</h3>
+                    <h3>Volume Calculator</h3>
                     <p>A fun interactive game made in Scratch!</p>
                     <a href="projects/VolumeCalculator.html" target="_blank">View Project</a>
                 </div>
